src/styles.scss
/* You can add global styles to this file, and also import other style files */


//body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }

@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";


html, body { height: 100%; }



.activeButton{
    @apply bg-primary-200 text-white flex items-center px-2 py-2 text-sm font-medium rounded-md
}

.activeButton2{
    @apply border-pink-500 text-gray-900 
}

.activeText2{
    @apply text-pink-500  hover:text-pink-700
}

g.raphael-group-ELXaYZwV {
    display: none;
}

svg > g[class^="raphael-group-"] > text{
    display: none;
}

g[class^='raphael-group-'][class$='-creditgroup'] {
    display:none !important;
}


.graph-title{
    @apply mt-1 text-lg font-semibold text-gray-600;
}

@keyframes fade {
    0% {
      opacity: 0;
    }
    100% {
      opacity: 1;
    }
  }

  router-outlet + * {
    display: block;  /* Change display inline to block */
    @apply h-full;
    animation: fade 1s;
  }


  .stats{
    @apply mt-1 text-3xl font-semibold text-gray-500
  }

  .statsText{
    @apply text-sm font-medium text-gray-500 truncate
  }

  .statsCard{
    @apply flex flex-col px-4 py-2 overflow-hidden rounded-md bg-white items-center shadow
  }



  .example-tooltip-blue {
    @apply bg-indigo-700 text-white;
  }

